--- a/main.css
+++ b/main.css
@@ -17,16 +17,16 @@ body {
 .calculator {
     background-image: linear-gradient(#00ffdd, #009c94);
     width: 350px;
-    height: 500px;
+    height: 550px;
     border-radius: 20px;
     color: #d1f8ff;
     box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.75);
 }
 
 .display {
-    height: 30%;
+    height: 35%;
     color: #072541;
-    font-size: 22px;
+    font-size: 20px;
 }
 
 .input {
@@ -34,7 +34,7 @@ body {
     display: flex;
     align-items: end;
     justify-content: end;
-    padding-right: 10px;
+    padding: 0 10px;
 }
 
 .result {
@@ -43,12 +43,12 @@ body {
     align-items: center;
     justify-content: end;
     padding-right: 20px;
-    font-size: 40px;
+    font-size: 36px;
     font-weight: bold;
 }
 
 .keyboard {
-    height: 70%;
+    height: 65%;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(5, 1fr);
